tests/ui/implicit_discriminant.stderr
error: explicit discriminant is required
 --> $DIR/implicit_discriminant.rs:6:5
  |
6 |     Two,
  |     ^^^

error: aborting due to previous error

